--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,9 @@
   <groupId>sonar-test-code</groupId>
   <artifactId>com.yo.sonar</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+    <properties>
+     <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
+  
 </project>
